--- a/src/styles/preview/PreviewItemWithDates.css
+++ b/src/styles/preview/PreviewItemWithDates.css
@@ -26,7 +26,7 @@
   color: var(--preview-page-details-color);
   font-family: var(--preview-page-details-font);
   font-size: var(--preview-page-details-fontsize);
-  padding-left: 3em;
+  padding-left: min(3em, 5cqw);
   text-align: right;
 }
 
