--- a/src/styles/preview/PreviewPersonalInfoPanel.css
+++ b/src/styles/preview/PreviewPersonalInfoPanel.css
@@ -35,6 +35,7 @@
   font-family: var(--preview-page-details-font);
 
   font-size: var(--preview-page-contacts-fontsize);
+  line-height: 1;
   padding: var(--preview-page-contacts-tb-padding)
     var(--preview-page-contacts-lr-padding);
 
@@ -45,14 +46,6 @@
   justify-content: space-around;
 
   overflow: hidden;
-}
-
-.preview-personal-info-panel .full-name {
-  grid-area: fullName;
-  display: flex;
-  flex-wrap: wrap;
-  padding-top: var(--preview-page-gap-tb);
-  font-family: var(--preview-page-full-name-font);
 }
 
 .preview-personal-info-panel .photo {
@@ -75,6 +68,15 @@
   border-radius: var(--preview-page-photo-radius);
 }
 
+.preview-personal-info-panel .full-name {
+  grid-area: fullName;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: var(--preview-page-gap-tb);
+  font-family: var(--preview-page-full-name-font);
+  line-height: var(--preview-page-full-name-lineheight);
+}
+
 .preview-personal-info-panel .text.surname {
   font-weight: 500;
   font-size: var(--preview-page-full-name-fontsize);
@@ -88,17 +90,12 @@
   padding-right: 0.1em;
 }
 
-.preview-personal-info-panel .text.surname {
-  grid-area: surname;
-  font-weight: 500;
-  font-size: var(--preview-page-full-name-fontsize);
-}
-
 .preview-personal-info-panel .text.title {
   grid-area: title;
   font-size: var(--preview-page-title-fontsize);
   color: var(--preview-page-details-color);
   font-family: var(--preview-page-title-font);
+  line-height: var(--preview-page-title-lineheight);
 }
 
 .preview-personal-info-panel .text.aboutMe {
